# lsm6dsox

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md  shell.nix
src/: accel.rs  gyro.rs  lib.rs  register.rs  types.rs
