[package]
name = "lsm6dsox"
version = "0.1.0"
authors = ["Tobias Bich <tobias.bich@iml.fraunhofer.de>", "Marvin Gudel <marvin.gudel@iml.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.13"
embedded-hal = "^0.2.4"
byteorder = { version = "^1.4.3", default-features = false }
accelerometer = "^0.12.0"
enumflags2 = "^0.7.3"
measurements = "0.11"
