[package]
name = "lsm6dsox"
version = "1.0.0"
authors = [ "Fraunhofer IML Embedded Rust Group <embedded-rust@iml.fraunhofer.de>" ]
edition = "2018"
license-file = "LICENSE"

[package.metadata.cargo-udeps.ignore]
#normal = []
development = ["embedded-hal-mock"] # embedded-hal-mock is only used in tests and cargo-udeps cannot detect it (yet)
#build = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "^0.2.4"
byteorder = { version = "^1.4.3", default-features = false }
accelerometer = "^0.12.0"
enumflags2 = "^0.7.3"
measurements = "0.11"
num_enum = "0.5"

[dev-dependencies]
embedded-hal-mock = "0.8.0"
